<resources>
    <string name="facebook_app_id" translatable="false">346142935847817</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb346142935847817</string>

    <string name="app_name" translatable="false">SmartAlarm</string>

    <string name="button_text_disarm">Disarm the alarm</string>
    <string name="button_text_arm">Arm the alarm</string>
    <string name="transition_auth_content">auth_content</string>
    <string name="transition_background">transition_background</string>
    <string name="transition_logo">transition_logo</string>
    <string name="input_hint_repeat_password">Repeat password</string>
    <string name="facebook_sign_in">Sign in with Facebook</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="input_hint_password">Password</string>
    <string name="register_with_email">Register with email</string>
    <string name="register">Register</string>
    <string name="input_hint_email">Email</string>
    <string name="reset_password">Reset password</string>
    <string name="title_alarm_state">Alarm State</string>
    <string name="title_security_incidents">Security Incidents</string>
    <string name="title_settings">Settings</string>
    <string name="title_arming">Arming</string>
    <string name="action_archive">Archive</string>
    <string name="action_delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="photos_count">Photos count</string>
    <string name="photo_sequence_interval">Photo interval</string>

    <string name="title_activity_incident_details">IncidentDetailsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="incidents_placeholder_text">No incidents reported.\nWhich is good, right?</string>
    <string name="photo_count_description">Photo count is the number of photos you want to have taken for a single reported security incident.</string>
    <string name="sequence_interval_description">Photo sequence interval specifies how much break there will be between each consecutive photo take in a security incident</string>
    <string name="logout_confirmation_message">Do you really want to log out? You will not be receiving any notifications from your core device.</string>
    <string name="delete_confirmation_message">Are you sure you want to delete the incident? It will be permanently wiped from the system.</string>
    <string name="delete">Delete</string>
    <string name="preview">Preview</string>
    <string name="reset_password_complete">Password reset process complete. We\'ve sent you an email with further instructions.</string>
    <string name="setup_connect_text">Connect the smartphone to\nyour Core Device via USB cable\nin order to safely pair up.\nWe care for your privacy and safety.</string>
    <string name="connect_to_wifi">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="alarm_state_disarmed">Your alarm is UNARMED.\nYou won\'t get any breach reports.</string>
    <string name="alarm_state_armed">Your alarm is ARMED.\nDon\'t worry, we\'ve got you covered!</string>
    <string name="arm_the_alarm">Arm the alarm</string>
    <string name="disarm_the_alarm">Disarm the alarm</string>
    <string name="core_device_setup_text">This is the first smartphone being\nconnected to your Core Device.\nPlease input the Wi-Fi network\ncredentials for whichyou want\nyour Core Device to connect to.\nKeep both devices connected via USB.</string>
    <string name="input_hint_ssid">Network name</string>

</resources>
