<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/headerBackgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"/>

        <ImageView
            android:layout_width="@dimen/auth_screen_logo_size"
            android:layout_height="@dimen/auth_screen_logo_size"
            android:layout_gravity="center"
            android:src="@drawable/app_logo"
            android:transitionName="@string/transition_logo"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.80"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:transitionName="@string/transition_auth_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xx_large"
            android:text="@string/core_device_setup_text"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ssidInputLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height"
            android:layout_marginLeft="@dimen/text_input_side_margin"
            android:layout_marginRight="@dimen/text_input_side_margin"
            android:layout_marginTop="@dimen/text_size_large">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ssidInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_hint_email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height"
            android:layout_marginLeft="@dimen/text_input_side_margin"
            android:layout_marginRight="@dimen/text_input_side_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_hint_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <pl.rmakowiecki.smartalarm.customView.ActionButton
            android:id="@+id/networkConnectButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_button_height"
            android:layout_margin="@dimen/margin_large"
            android:enabled="false"
            app:default_color="@color/accent"
            app:failure_color="@color/failureRed"
            app:failure_icon="@drawable/icon_failure_pill_button"
            app:success_icon="@drawable/icon_success_pill_button"
            app:text="@string/login"
            app:text_color="@android:color/white"/>

    </LinearLayout>
</LinearLayout>