<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_x_large"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/photoCountKnobInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?attr/selectableItemBackground"
                android:drawableEnd="@drawable/ic_info"
                android:drawablePadding="@dimen/margin_medium"
                android:padding="@dimen/margin_small"
                android:text="@string/photos_count"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.sdsmdg.harjot.crollerTest.Croller
                    android:id="@+id/photosCountKnobWidget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    app:back_circle_color="@color/lightGray"
                    app:indicator_color="@color/accent"
                    app:indicator_width="10"
                    app:is_continuous="true"
                    app:label_color="@color/textSecondary"
                    app:main_circle_color="#FFFFFF"
                    app:max="21"
                    app:progress_primary_color="@color/accent"
                    app:progress_secondary_color="#EEEEEE"
                    app:start_offset="45"/>

                <ProgressBar
                    android:id="@+id/photoCountProgressView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/intervalKnobInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?attr/selectableItemBackground"
                android:drawableEnd="@drawable/ic_info"
                android:drawablePadding="@dimen/margin_medium"
                android:padding="@dimen/margin_small"
                android:text="@string/photo_sequence_interval"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.sdsmdg.harjot.crollerTest.Croller
                    android:id="@+id/photosSequenceIntervalKnobWidget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    app:back_circle_color="@color/lightGray"
                    app:indicator_color="@color/accent"
                    app:indicator_width="10"
                    app:is_continuous="true"
                    app:label_color="@color/textSecondary"
                    app:main_circle_color="#FFFFFF"
                    app:max="20"
                    app:progress_primary_color="@color/accent"
                    app:progress_secondary_color="#EEEEEE"
                    app:start_offset="45"/>

                <ProgressBar
                    android:id="@+id/sequenceIntervalProgressView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <pl.rmakowiecki.smartalarm.customView.ActionButton
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_button_height"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:visibility="visible"
        app:default_color="@color/accent"
        app:text="@string/logout"
        app:text_color="@android:color/white"/>
</FrameLayout>